dialog new user

--- a/src/app/newplayer/new-player-dialog.html
+++ b/src/app/newplayer/new-player-dialog.html
@@ -1,6 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)" ng-cloak>
+<md-dialog aria-label="new player" ng-cloak>
 
-    <md-toolbar>
+    <!--<md-toolbar>
         <div class="md-toolbar-tools">
             <h2>Enter your name and party</h2>
             <span flex></span>
@@ -12,7 +12,7 @@
     <md-dialog-content>
         <div class="md-dialog-content">
             <md-input-container class="md-icon-float md-block">
-                <!-- Use floating label instead of placeholder -->
+              
                 <label>Name</label>
                 <md-icon md-svg-src="img/icons/ic_person_24px.svg" class="name"></md-icon>
                 <input ng-model="user.name" type="text">
@@ -20,9 +20,7 @@
         </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
-        <!--<span>
-            pick your party
-        </span>-->
+   
         <span flex></span>
         <md-button ng-click="answer('not useful')" class="md-icon-button md-img-btn">
             <img class="md-avatar" src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Republican_Disc.png" alt="imghh2" />
@@ -32,6 +30,6 @@
                 alt="imgh1" />
 
         </md-button>
-    </md-dialog-actions>
-
+    </md-dialog-actions>-->
+    <new-player></new-player>
 </md-dialog>
