parties from firebase

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -3,7 +3,7 @@
 </header>
 <md-content layout="row" layout-fill layout-padding>
   <div flex="20" class="md-whiteframe-1dp">
-    <md-toolbar class="md-warn">
+    <md-toolbar class="md-accent">
       <div class="md-toolbar-tools">
         <h2 class="md-flex">Waiting List</h2>
       </div>
@@ -30,7 +30,7 @@
     </md-button>
   </div>
   <div flex="30" class="md-whiteframe-1dp">
-    <md-toolbar class="md-warn">
+    <md-toolbar class="md-accent">
       <div class="md-toolbar-tools">
         <h2 class="md-flex">Toolbar: md-warn</h2>
       </div>
@@ -46,7 +46,7 @@
           </div>
         </md-list-item>
 
-        <md-toolbar class="md-theme-light">
+        <md-toolbar class="md-primary">
           <h2 class="md-toolbar-tools">
                             <span>Inset</span>
                             </h2>
