--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,4 +1,4 @@
-<md-toolbar layout="row" layout-align="center center">
+<md-toolbar class="md-primary" layout="row" layout-align="center center">
 
   <md-button class="md-whiteframe-1dp"" href="#">Tinder</md-button>
 
