--- a/src/app/newplayer/newPlayer.component.html
+++ b/src/app/newplayer/newPlayer.component.html
@@ -1,31 +1,35 @@
- <md-toolbar>
-        <div class="md-toolbar-tools">
-            <h2>Enter your name and party</h2>
-            <span flex></span>
-            <md-button class="md-icon-button" ng-click="cancel()">
-                <md-icon md-svg-src="img/icons/ic_close_24px.svg" aria-label="Close dialog"></md-icon>
-            </md-button>
-        </div>
-    </md-toolbar>
-    <md-dialog-content>
-        <div class="md-dialog-content">
-            <md-input-container class="md-icon-float md-block">
-              
-                <label>Name</label>
-                <md-icon md-svg-src="img/icons/ic_person_24px.svg" class="name"></md-icon>
-                <input ng-model="user.name" type="text">
-            </md-input-container>
-        </div>
-    </md-dialog-content>
-    <md-dialog-actions layout="row">
-   
+<md-toolbar class="md-accent">
+    <div class="md-toolbar-tools">
+        <h2>Enter your name and party</h2>
         <span flex></span>
-        <md-button ng-click="answer('not useful')" class="md-icon-button md-img-btn">
+        <md-button class="md-icon-button" ng-click="cancel()">
+            <md-icon md-svg-src="img/icons/ic_close_24px.svg" aria-label="Close dialog"></md-icon>
+        </md-button>
+    </div>
+</md-toolbar>
+<md-dialog-content>
+    <div class="md-dialog-content">
+        <md-input-container class="md-icon-float md-block">
+
+            <label>Name</label>
+            <md-icon md-svg-src="img/icons/ic_person_24px.svg" class="name"></md-icon>
+            <input ng-model="vm.name" type="text">
+        </md-input-container>
+    </div>
+</md-dialog-content>
+<md-dialog-actions layout="row" ng-show="vm.name">
+
+    <span flex></span>
+    <!--<md-button ng-click="vm.createUser('R')" class="md-icon-button md-img-btn">
             <img class="md-avatar" src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Republican_Disc.png" alt="imghh2" />
         </md-button>
-        <md-button ng-click="answer('useful')" class="md-icon-button md-img-btn" style="margin-right:20px;">
+        <md-button ng-click="vm.createUser('D')" class="md-icon-button md-img-btn" style="margin-right:20px;">
             <img class="md-avatar" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/U.S._Democratic_Party_logo_(transparent).svg/2000px-U.S._Democratic_Party_logo_(transparent).svg.png"
                 alt="imgh1" />
 
-        </md-button>
-    </md-dialog-actions>
+        </md-button>-->
+    <md-button ng-repeat="party in vm.parties" ng-click="vm.createUser(party.$id)" class="md-icon-button md-img-btn">
+        <img class="md-avatar" ng-src="{{party.src}}" alt="imghh2" />
+    </md-button>
+
+</md-dialog-actions>
