completed create user component

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,10 +2,10 @@
   <acme-navbar creation-date="main.creationDate"></acme-navbar>
 </header>
 <md-content layout="row" layout-fill layout-padding>
-  
+
   <!--waiting-list component-->
   <wait-list people="main.waitList" flex="20" class="md-whiteframe-1dp">
-    </wait-list>
+  </wait-list>
   <!--<div flex="20" class="md-whiteframe-1dp">
     <md-toolbar class="md-accent">
       <div class="md-toolbar-tools">
@@ -25,17 +25,16 @@
       </md-list>
     </md-content>
   </div>-->
-    <div flex class="md-whiteframe-1dp padding">
 
-    <md-button ng-hide="main.hideNewplayer()" ng-click="main.newPlayer()" class="md-raised md-primary">
-      NEW PLAYER
-    </md-button>
-    <h4 ng-show="main.hideNewplayer()">you are on the waiting list , be patient, some conter party is coming</h4>
-
-    <md-content id="content" class="animate-slide-up md-background md-hue-1" ui-view="content" flex>
+  <div class="md-whiteframe-1dp padding" flex>
+    <!--create user component-->
+    <create-user users="main.usersList">
+    </create-user>
+    <md-content id="content" class="animate-slide-up md-background md-hue-1" 
+    ui-view="content" flex>
     </md-content>
-
   </div>
+
   <!--<div flex class="md-whiteframe-1dp padding">
 
     <md-button ng-hide="main.hideNewplayer()" ng-click="main.newPlayer()" class="md-raised md-primary">
@@ -47,7 +46,7 @@
     </md-content>
 
   </div>-->
-  
+
   <div flex="30" class="md-whiteframe-1dp">
     <md-toolbar class="md-accent">
       <div class="md-toolbar-tools">
