--- a/src/app/waitList/waitList.component.html
+++ b/src/app/waitList/waitList.component.html
@@ -6,7 +6,7 @@
 <md-content>
     <md-list>
 
-        <md-list-item class="md-2-line" ng-repeat="person in vm.people">
+        <md-list-item class="md-2-line" ng-repeat="person in vm.peopleWaiting">
             <img ng-src="{{person.party.src}}" class="md-avatar" alt="imgh" />
             <div class="md-list-item-text">
                 <h3>{{person.name}}</h3>
