--- a/src/app/createUser/createUser.component.html
+++ b/src/app/createUser/createUser.component.html
@@ -27,3 +27,5 @@
 
     </md-card-footer>
 </md-card>
+
+<h1 ng-show="vm.onWaiting"> you are on the waitingList , be patient, a countermatch is coming</h6>
